Fix spacings

--- a/src/scss/expectations/_expectations.scss
+++ b/src/scss/expectations/_expectations.scss
@@ -9,8 +9,6 @@
   margin-top: 13px;
   &__tile {
     flex-grow: 0;
-
-    height: 304px;
     padding: 25px;
 
     border-radius: 4px;
