--- a/src/scss/works/_works.scss
+++ b/src/scss/works/_works.scss
@@ -1,5 +1,5 @@
 .container--works {
-  padding-top: 83px;
+  // padding-top: 83px;
 }
 
 .slider--work {
@@ -17,18 +17,23 @@
     order: 0;
 
     width: 100%;
-    @media (min-width: $bp_tablet_horizontal) {
-      margin-bottom: 63px;
-    }
   }
 }
 
 .work {
   display: flex;
   flex-direction: column;
+  padding-top: 64px;
+  &:first-of-type {
+    padding-top: 38px;
+  }
   @media (min-width: $bp_tablet_horizontal) {
+    padding-top: 135px;
     flex-direction: row;
     flex-wrap: wrap;
+    &:first-of-type {
+      padding-top: 64px;
+    }
   }
   &__info {
     display: flex;
@@ -54,12 +59,6 @@
       max-width: 100%;
     }
   }
-  &__subheader {
-    margin-top: 38px;
-    @media (min-width: $bp_tablet_vertical) {
-      margin-top: 0;
-    }
-  }
   &__link {
     margin-top: 8px;
 
@@ -70,6 +69,7 @@
 
     margin-top: 16px;
     @media (min-width: $bp_tablet_vertical) {
+      margin-top: 0;
       flex-grow: 1;
 
       max-width: 50%;
